# snorkel

./: Dockerfile  Makefile  README.md  docker-compose.yml  index.html  index.js  pyproject.toml  style.css
snorkel/: __init__.py  __main__.py  app.py  routes.py  settings.py
snorkel/static/: app.js  geometries.json  package-lock.json  package.json  site.css
snorkel/templates/: map.html  map.vue.html
